samples/_failures_safe/1761452227_c6b80f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f97500f2.c: In function ‘print_token’:
./samples/SAFE/__tmp_f97500f2.c:177:5: error: expected expression at end of input
  177 |     printf("Line %d, Column %d: %s '%s'\n",
      |     ^~~~~~
./samples/SAFE/__tmp_f97500f2.c:177:5: error: expected declaration or statement at end of input
